[package]
name = "docomo_sharecycle"
version = "0.1.0"
authors = ["Toshiya Nakakura <nakakura@me.com>"]
edition = "2018"

[dependencies]
env_logger = "0.6.2"
failure = "0.1.5"
futures = "0.1.28"
log = "0.4.8"
regex = "1.2.1"
reqwest = "0.9.19"
serde = "*"
tokio = "0.1.22"
toml = "*"

[[bin]]
name = "update_ports"
path = "src/bin/update_ports.rs"

[[bin]]
name = "register_ports"
path = "src/bin/register_ports.rs"
